--- a/TestBlazor/Layout/MainLayout.razor
+++ b/TestBlazor/Layout/MainLayout.razor
@@ -1,16 +1,17 @@
 ﻿@inherits LayoutComponentBase
-<div class="page">
-    <div class="sidebar">
-        <NavMenu/>
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+@Body
+@* <div class="page"> *@
+@*     $1$ <div class="sidebar"> #1# *@
+@*     $1$     <NavMenu/> #1# *@
+@*     $1$ </div> #1# *@
+@* *@
+@*     <main> *@
+@*         $1$ <div class="top-row px-4"> #1# *@
+@*         $1$     <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a> #1# *@
+@*         $1$ </div> #1# *@
+@* *@
+@*         <article class="content px-4"> *@
+@*             @Body *@
+@*         </article> *@
+@*     </main> *@
+@* </div> *@
